--- a/src/stories/Text/text.css
+++ b/src/stories/Text/text.css
@@ -19,7 +19,7 @@
       flex-wrap: wrap;
   width: calc(0.5em * 5);
   height: calc(0.5em * 5);
-  padding: 0 0.5em calc(0.5em * 2) 0;
+  padding: 0 0.5em 0.5em 0;
   position: relative;
 }
 
