--- a/src/stories/Text/text.scss
+++ b/src/stories/Text/text.scss
@@ -45,6 +45,7 @@ $stitchSize: 0.5em;
         height: $stitchSize;
         width: $stitchSize;
         position: absolute;
+        left: 0;
       }
     }
   }
