--- a/src/stories/Wrap/wrap.css
+++ b/src/stories/Wrap/wrap.css
@@ -1,11 +1,13 @@
 .cross-wrap {
   /* HTML5 display-role reset for older browsers */
-  padding: 1em;
-  min-height: 100vh;
-  min-width: 100vw;
-  background-color: bisque;
+  padding: calc(0.5em * 2);
   background-image: url("./assets/cross-background.png");
-  background-size: 1em;
+  background-size: calc(0.5em * 2);
+  min-height: calc(100vh - (0.5em * 4));
+  height: 100%;
+  max-width: 100vw;
+  overflow-y: scroll;
+  background-attachment: local;
 }
 
 .cross-wrap html,
