--- a/src/stories/Wrap/wrap.scss
+++ b/src/stories/Wrap/wrap.scss
@@ -1,3 +1,5 @@
+$stitchSize: 0.5em;
+
 .cross-wrap {
   html,
   body,
@@ -123,10 +125,13 @@
     border-collapse: collapse;
     border-spacing: 0;
   }
-  padding: 1em;
-  min-height: 100vh;
-  min-width: 100vw;
-  background-color: bisque;
+  padding: calc(#{$stitchSize} * 2);
   background-image: url("./assets/cross-background.png");
-  background-size: 1em;
+  background-size: calc(#{$stitchSize} * 2);
+  min-height: calc(100vh - (#{$stitchSize} * 4));
+
+  height: 100%;
+  max-width: 100vw;
+  overflow-y: scroll;
+  background-attachment: local;
 }
