--- a/src/stories/Box/border.scss
+++ b/src/stories/Box/border.scss
@@ -1,9 +1,24 @@
 $stitchSize: 0.5em;
 
 .cross-border {
-  padding: calc(#{$stitchSize} * 1) !important;
-  background-image: url("./assets/cross-pixel.png");
   background-size: $stitchSize;
+  &.full-style {
+    background-image: url("./assets/cross-pixel.png");
+    background-size: $stitchSize;
+  }
+  &.half-style {
+    background-image: url("./assets/cross-style-half.png");
+    background-size: calc(#{$stitchSize} * 2);
+  }
+  &.lean-left-style {
+    background-image: url("./assets/cross-style-lean-left.png");
+    background-size: calc(#{$stitchSize} * 3);
+  }
+  &.lean-right-style {
+    background-image: url("./assets/cross-style-lean-right.png");
+    background-size: calc(#{$stitchSize} * 3);
+  }
+
   .cross-border-inner {
     background-image: url("./assets/cross-background.png");
     background-size: calc(#{$stitchSize} * 2);
