--- a/src/stories/Wrap/wrap.css
+++ b/src/stories/Wrap/wrap.css
@@ -1,9 +1,6 @@
 .cross-wrap {
   /* HTML5 display-role reset for older browsers */
-  padding: calc(0.5em * 2);
   background-image: url("./assets/cross-background.png");
-  background-size: calc(0.5em * 2);
-  min-height: calc(100vh - (0.5em * 4));
   height: 100%;
   max-width: 100vw;
   overflow-y: scroll;
@@ -138,5 +135,34 @@
 .cross-wrap table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+.cross-wrap .cross-wrap-border {
+  background-size: 0.5em;
+}
+
+.cross-wrap .cross-wrap-border.full-style {
+  background-image: url("./assets/cross-pixel.png");
+  background-size: 0.5em;
+}
+
+.cross-wrap .cross-wrap-border.half-style {
+  background-image: url("./assets/cross-style-half.png");
+  background-size: calc(0.5em * 2);
+}
+
+.cross-wrap .cross-wrap-border.lean-left-style {
+  background-image: url("./assets/cross-style-lean-left.png");
+  background-size: calc(0.5em * 3);
+}
+
+.cross-wrap .cross-wrap-border.lean-right-style {
+  background-image: url("./assets/cross-style-lean-right.png");
+  background-size: calc(0.5em * 3);
+}
+
+.cross-wrap .cross-wrap-border .cross-border-inner {
+  background-image: url("./assets/cross-background.png");
+  background-size: calc(0.5em * 2);
 }
 /*# sourceMappingURL=wrap.css.map */
