--- a/src/stories/Text/text.css
+++ b/src/stories/Text/text.css
@@ -21,6 +21,10 @@
   height: calc(0.5em * 5);
   padding: 0 0.5em 0.5em 0;
   position: relative;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .cross-text .cross-letter .outer-top-1,
