--- a/src/stories/Button/button.css
+++ b/src/stories/Button/button.css
@@ -1,30 +1,63 @@
-.storybook-button {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  border: 0;
-  border-radius: 3em;
-  cursor: pointer;
-  display: inline-block;
-  line-height: 1;
+.cross-wrap .cross-button {
+  padding: 0.5em;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-image: url("./assets/cross-pixel.png");
+  background-size: 0.5em;
+  position: relative;
 }
-.storybook-button--primary {
-  color: white;
-  background-color: #1ea7fd;
+
+.cross-wrap .cross-button .cross-button-soft-side {
+  height: 0.5em;
+  width: 0.5em;
+  background-image: url("./assets/cross-pixel.png");
+  background-size: 0.5em;
+  position: absolute;
 }
-.storybook-button--secondary {
-  color: #333;
-  background-color: transparent;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+
+.cross-wrap .cross-button .cross-button-soft-out {
+  height: 0.5em;
+  width: 0.5em;
+  background-image: url("./assets/cross-pixel.png");
+  background-size: 0.5em;
+  position: absolute;
 }
-.storybook-button--small {
-  font-size: 12px;
-  padding: 10px 16px;
+
+.cross-wrap .cross-button .cross-button-soft-side-1 {
+  left: 0.5em;
+  top: 0.5em;
 }
-.storybook-button--medium {
-  font-size: 14px;
-  padding: 11px 20px;
+
+.cross-wrap .cross-button .cross-button-soft-side-2 {
+  right: 0.5em;
+  top: 0.5em;
 }
-.storybook-button--large {
-  font-size: 16px;
-  padding: 12px 24px;
+
+.cross-wrap .cross-button .cross-button-soft-side-3 {
+  left: 0.5em;
+  bottom: 0.5em;
 }
+
+.cross-wrap .cross-button .cross-button-soft-side-4 {
+  right: 0.5em;
+  bottom: 0.5em;
+}
+
+.cross-wrap .cross-button .cross-button-inner {
+  padding: 1em;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-image: url("./assets/cross-pixel.png");
+  background-size: 0.5em;
+}
+
+.cross-wrap .cross-button .cross-button-inner .cross-text .cross-letter {
+  padding: 0 0.5em 0 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+/*# sourceMappingURL=button.css.map */
