--- a/src/stories/Wrap/wrap.css
+++ b/src/stories/Wrap/wrap.css
@@ -1,6 +1,11 @@
 .cross-wrap {
   /* HTML5 display-role reset for older browsers */
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  padding-left: 0.5em;
   background-image: url("./assets/cross-background.png");
+  background-size: calc(0.5em * 2);
+  min-height: calc(100vh - (0.5em * 4));
   height: 100%;
   max-width: 100vw;
   overflow-y: scroll;
