--- a/src/stories/Border/border.css
+++ b/src/stories/Border/border.css
@@ -1,29 +1,23 @@
 .cross-border {
   background-size: 0.5em;
 }
-
 .cross-border.full-style {
   background-image: url("./assets/cross-pixel.png");
   background-size: 0.5em;
 }
-
 .cross-border.half-style {
   background-image: url("./assets/cross-style-half.png");
   background-size: calc(0.5em * 2);
 }
-
 .cross-border.lean-left-style {
   background-image: url("./assets/cross-style-lean-left.png");
   background-size: calc(0.5em * 3);
 }
-
 .cross-border.lean-right-style {
   background-image: url("./assets/cross-style-lean-right.png");
   background-size: calc(0.5em * 3);
 }
-
 .cross-border .cross-border-inner {
   background-image: url("./assets/cross-background.png");
   background-size: calc(0.5em * 2);
-}
-/*# sourceMappingURL=border.css.map */
+}/*# sourceMappingURL=border.css.map */
