--- a/src/stories/Button/button.css
+++ b/src/stories/Button/button.css
@@ -7,7 +7,6 @@
   background-size: 0.5em;
   position: relative;
 }
-
 .cross-wrap .cross-button .cross-button-soft-side {
   height: 0.5em;
   width: 0.5em;
@@ -15,7 +14,6 @@
   background-size: 0.5em;
   position: absolute;
 }
-
 .cross-wrap .cross-button .cross-button-soft-out {
   height: 0.5em;
   width: 0.5em;
@@ -23,27 +21,22 @@
   background-size: 0.5em;
   position: absolute;
 }
-
 .cross-wrap .cross-button .cross-button-soft-side-1 {
   left: 0.5em;
   top: 0.5em;
 }
-
 .cross-wrap .cross-button .cross-button-soft-side-2 {
   right: 0.5em;
   top: 0.5em;
 }
-
 .cross-wrap .cross-button .cross-button-soft-side-3 {
   left: 0.5em;
   bottom: 0.5em;
 }
-
 .cross-wrap .cross-button .cross-button-soft-side-4 {
   right: 0.5em;
   bottom: 0.5em;
 }
-
 .cross-wrap .cross-button .cross-button-inner {
   padding: 1em;
   width: -webkit-fit-content;
@@ -52,12 +45,10 @@
   background-image: url("./assets/cross-pixel.png");
   background-size: 0.5em;
 }
-
 .cross-wrap .cross-button .cross-button-inner .cross-text .cross-letter {
   padding: 0 0.5em 0 0;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-}
-/*# sourceMappingURL=button.css.map */
+}/*# sourceMappingURL=button.css.map */
